@@ -20,8 +20,16 @@ from backend.orchestrator.task_utils import run_with_syncrow
 logger = get_task_logger(__name__)
 
 
-@celery_app.task(name="orchestrator.sync_dummy")
-def sync_connector(connector_profile_id: str, user_id: str, org_id: str) -> str:  # noqa: D401
+@celery_app.task(
+    name="orchestrator.sync_dummy",
+    bind=True,
+    autoretry_for=(Exception,),
+    retry_backoff=True,
+    retry_backoff_max=600,
+    retry_kwargs={"max_retries": 5},
+    acks_late=True,
+)
+def sync_connector(self, connector_profile_id: str, user_id: str, org_id: str) -> str:  # noqa: D401
     logger.info("Starting sync task profile=%s user=%s org=%s", connector_profile_id, user_id, org_id)
 
     import asyncio
